--- a/front.html
+++ b/front.html
@@ -49,6 +49,8 @@ if ("{{Card}}" === "Meaning") {
 	questionNameDiv.classList.add("meaning");
 } else if ("{{Card}}" === "Reading") {
 	questionNameDiv.classList.add("reading");
+} else if ("{{Card}}" === "Characters") {
+	questionNameDiv.classList.add("reading");
 }
 </script>
 {{/Reading_Whitelist}}
