--- a/back.html
+++ b/back.html
@@ -7,6 +7,13 @@ Sections get turned off based on which Card Type is displayed.
 
 <div id=card-back>
 
+<!-- Correct Answers Section -->
+<!--For: Radical, Kanji, Vocabulary-->
+<div>
+	<br>Correct Answers<hr>
+	<p id="correct"></p>
+</div>
+
 <!--Radical Combination Section-->
 <!--For: Kanji-->
 <div id=section-radical-combination>
@@ -77,6 +84,17 @@ Sections get turned off based on which Card Type is displayed.
 	<div id=box-container></div>
 </div>
 
+<!--Phonetic-Semantic Composition Section-->
+<!--For: Radical, Kanji-->
+<div id=section-phonetic-semantic>
+    Phonetic-Semantic Composition<hr>
+    <p class="explanation" id=phonetic-semantic-description></p>
+    <div id=phonetic-semantic-container>
+        <div id=phonetic-container></div>
+        <div id=compound-container></div>
+    </div>
+</div>
+
 <!--Found in Vocabulary Section-->
 <!--For: Kanji-->
 <div id=section-found-in-vocabulary>
@@ -123,11 +141,6 @@ if (wordtype.toString().length !== 0) {
 
 <!--SCRIPT: Disable unused Reading divisions.-->
 <script>
-if ("{{Card_Type}}" == "Kana_Vocabulary") {
-	document.getElementById("vocabulary-reading").innerHTML = `{{Characters}}`;
-	document.getElementsByClassName("explanation")[1].style.display = "none";
-}
-
 function disable_reading_div(id, readings) {
 	var div = document.getElementById(id);
 	if (readings === "") {
@@ -211,7 +224,7 @@ if (combinations.length === 0) {
 
 <!--SCRIPT: Slice and add context sentences.-->
 <script>
-if ("{{Card_Type}}" == "Vocabulary" || "{{Card_Type}}" == "Kana_Vocabulary") {
+if ("{{Card_Type}}" == "Vocabulary") {
 	var sentences = `{{Context_Sentences}}`;
 	var array = sentences.split("|");
 
@@ -234,7 +247,6 @@ if ("{{Card_Type}}" == "Vocabulary" || "{{Card_Type}}" == "Kana_Vocabulary") {
 <script>
 var readingsection = document.getElementById("section-reading")
 var meaningsection = document.getElementById("section-meaning")
-var boxsection = document.getElementById("section-box")
 var contextsection = document.getElementById("section-context")
 var combinationsection = document.getElementById("section-radical-combination")
 var foundinvocabularysection = document.getElementById("section-found-in-vocabulary")
@@ -248,16 +260,11 @@ if ("{{Card_Type}}" === "Radical") {
 if ("{{Card_Type}}" === "Kanji") {
 	contextsection.style.display = "none";
 	compositionsection.style.display = "none";
-}
+} 
 if ("{{Card_Type}}" === "Vocabulary") {
 	combinationsection.style.display = "none";
 	foundinvocabularysection.style.display = "none";
-}
-if ("{{Card_Type}}" === "Kana_Vocabulary") {
-	combinationsection.style.display = "none";
-	foundinvocabularysection.style.display = "none";
-	boxsection.style.display = "none";
-}
+} 
 </script>
 
 <!--SCRIPT: Populate Box Characters (Found in Kanji, Visually Similar Kanji and Kanji Composition).-->
@@ -328,52 +335,106 @@ if ("{{Card_Type}}" == "Radical") {
 }
 </script>
 
-<!--SCRIPT: Add Radical Combination Characters.-->
+<!--SCRIPT: Add Phonetic-Semantic Composition Characters.-->
 <script>
-if ("{{Card_Type}}" == "Kanji") {
-	var character = `{{Components_Characters}}`;
-	var characterarray = character.split(", ");
-	var meaning = "{{Components_Meaning}}";
-	var meaningarray = meaning.split(", ");
-	
-	for (var i = 0; i < meaningarray.length; i++){
-		var div = document.getElementById("combination")
+if ("{{Card_Type}}" == "Kanji" || "{{Card_Type}}" == "Radical") {
+	var sections = `{{Keisei}}`;
+	var sectionarray = sections.split(" | ");
+	var start = 1;
+	var data = sectionarray[0].split(", ");
+	var description = document.getElementById("phonetic-semantic-description");
+	if (data[0] == "compound" || data[0] == "phonetic") {
+		if (data[0] == "compound") {
+			// Backticks needed for radicals with "
+			description.innerHTML = "The kanji 「<ja>" + `{{Characters}}` + "</ja>」 was created using semantic-phonetic composition!<br><br>The phonetic component is 「<ja>" + data[2] + "</ja>」 with the ON reading(s) 「<ja>" + data[3] + "</ja>」 (including rare ones), and the semantic component is 「<ja>" + data[4] + "</ja>」.<br>"
+		} else if (data[0] == "phonetic") {
+			var description = document.getElementById("phonetic-semantic-description");
+			if ("{{Card_Type}}" == "Kanji") {
+				description.innerHTML = "The kanji 「<ja>" + `{{Characters}}` + "</ja>」 is used as a phonetic component in other compounds! Its ON reading(s) are 「<ja>" + data[3] + "</ja>」.<br>"
+			} else {
+				description.innerHTML = "The radical 「<ja>" + `{{Characters}}` + "</ja>」 is used as a phonetic component in other compounds! Its ON reading(s) are 「<ja>" + data[3] + "</ja>」.<br>"				
+			}
+		}
+		var div = document.getElementById("phonetic-container");
 		var element = document.createElement("div");
-	
-		element.innerHTML = "<radical-combination>"+ characterarray[i] + "</radical-combination>" + "" + meaningarray[i].toString().substring(0, 15) + "";
+		element.innerHTML = "<div id=phonetic-character>" + data[2] + "<div id=box-meaning>" + data[3].split("・")[0] + "<br>Phonetic</div></div>";
 		div.appendChild(element);
-	
-		if (i + 1 != characterarray.length) {
-			var div = document.getElementById("combination")
-			var element = document.createElement("p");
-			element.innerHTML = "<div class=combination-plus><b>+<b/></div>";
+		if (data[1].includes("R")) {
+			var element = document.createElement("div");
+			element.innerHTML = "<div id=radical-character>" + data[2] + "<div id=box-meaning>" + data[3].split("・")[0] + "<br>" + sectionarray[start] + "</div></div>";
+			div.appendChild(element);
+			start += 1;
+		}
+		if (data[1].includes("K")) {
+			var element = document.createElement("div");
+			element.innerHTML = "<div id=box-character>" + data[2] + "<div id=box-meaning>" + sectionarray[start].split(", ")[1] + "<br>" + sectionarray[start].split(", ")[0] + "</div></div>";
+			div.appendChild(element);
+			start += 1;
+		}
+		var div = document.getElementById("compound-container");
+		for (var i = start; i < sectionarray.length; i++) {
+			var parts = sectionarray[i].split(", ");
+			var element = document.createElement("div");
+			element.innerHTML = "<div id=box-character>" + parts[0] + "<div id=box-meaning>" + parts[1] + "<br>" + parts[2] + "</div></div>";
 			div.appendChild(element);
 		}
+	} else if (data[0] == "unprocessed") {
+		description.innerHTML = "The kanji 「<ja>" + `{{Characters}}` + "</ja>」 has not been added to the WK Userscripts Keisei DB yet, please wait for a future version.<br>";
+	} else if (data[0] == "nonradical") {
+		description.innerHTML = "The radical 「<ja>" + `{{Characters}}` + "</ja>」 is not considered a phonetic mark!<br>";
+	} else if (data[0] == "unknown") {
+		description.innerHTML = "The kanji 「<ja>" + `{{Characters}}` + "</ja>」 has an unknown or contested origin, or its phonetic mark is too obscure to be useful. Stay tuned for more information in future versions of WK Userscripts Keisei.";
+	} else {
+		description.innerHTML = "The kanji 「<ja>" + `{{Characters}}` + "</ja>」 is not considered a semantic-phonetic composition.<br>Note: {{Keisei}}<br>";
+	}
+} else {
+	var section = document.getElementById("section-phonetic-semantic");
+	section.style.display = "none";
+}
+</script>
+
+<!--SCRIPT: Add Radical Combination Characters.-->
+<script>
+var character = `{{Components_Characters}}`;
+var characterarray = character.split(", ");
+var meaning = "{{Components_Meaning}}";
+var meaningarray = meaning.split(", ");
+
+for (var i = 0; i < meaningarray.length; i++){
+	var div = document.getElementById("combination")
+	var element = document.createElement("div");
+
+	element.innerHTML = "<radical-combination>"+ characterarray[i] + "</radical-combination>" + "" + meaningarray[i].toString().substring(0, 15) + "";
+	div.appendChild(element);
+
+	if (i + 1 != characterarray.length) {
+		var div = document.getElementById("combination")
+		var element = document.createElement("p");
+		element.innerHTML = "<div class=combination-plus><b>+<b/></div>";
+		div.appendChild(element);
 	}
 }
 </script>
 
 <!--SCRIPT: Add Found in Vocabulary Characters.-->
 <script>
-if ("{{Card_Type}}" == "Kanji") {
-	var character = "{{Found_in_Characters}}";
-	var characterarray = character.split(", ");
-	var meaning = "{{Found_in_Meaning}}";
-	var meaningarray = meaning.split(", ");
-	var reading = "{{Found_in_Reading}}";
-	var readingarray = reading.split(", ");
-	
-	for (var i = 0; i < characterarray.length; i++){
-		var div = document.getElementById("found-in-vocabulary-container")
-		var element = document.createElement("div");
-		element.innerHTML = "<div id=found-in-vocabulary-box><div class=found-in-voc>"+ characterarray[i] +"</div><div class=found-in-voc-reading>" + readingarray[i] +"<br>" + meaningarray[i] +"</div></div>";
-		div.appendChild(element);
-	}
-	
-	if (character.toString().length == 0) {
-		var foundinvocabularysection = document.getElementById("section-found-in-vocabulary")
-		foundinvocabularysection.style.display = "none";
-	}
+var character = "{{Found_in_Characters}}";
+var characterarray = character.split(", ");
+var meaning = "{{Found_in_Meaning}}";
+var meaningarray = meaning.split(", ");
+var reading = "{{Found_in_Reading}}";
+var readingarray = reading.split(", ");
+
+for (var i = 0; i < characterarray.length; i++){
+	var div = document.getElementById("found-in-vocabulary-container")
+	var element = document.createElement("div");
+	element.innerHTML = "<div id=found-in-vocabulary-box><div class=found-in-voc>"+ characterarray[i] +"</div><div class=found-in-voc-reading>" + readingarray[i] +"<br>" + meaningarray[i] +"</div></div>";
+	div.appendChild(element);
+}
+
+if (character.toString().length == 0) {
+	var foundinvocabularysection = document.getElementById("section-found-in-vocabulary")
+	foundinvocabularysection.style.display = "none";
 }
 </script>
 
@@ -392,21 +453,73 @@ if (document.getElementById("typeans")) {
 		//for pc and android:
 		typedAnswer = typedAnswer_element.querySelector(".typeBad").innerText;
 	}
-	typedAnswerLower = typedAnswer.toLowerCase();
-	var meaningWhitelist = `{{Meaning_Whitelist}}`.toLowerCase().split(", ");
-	var readingWhitelist = `{{Reading_Whitelist}}`.toLowerCase().split(", ");
+	var typedAnswerLower = typedAnswer.toLowerCase();
+} else {
+	var typedAnswerLower = "";
+}
 
-	var correctAnswers = [];
-	var incorrectAnswers = [];
-	if (`{{Card}}` === "Meaning") {
-		correctAnswers = meaningWhitelist;
-	} else if (`{{Card}}` === "Reading") {
-		correctAnswers = readingWhitelist;
+var meaningWhitelist = `{{Meaning_Whitelist}}`.toLowerCase().split(", ");
+var readingWhitelist = `{{Reading_Whitelist}}`.toLowerCase().split(", ");
+var correctAnswers = [];
+var correctText = document.getElementById("correct");
+
+if (`{{Card}}` === "Meaning") {
+	var capitalize = (array) => (array.map((elem) => (elem.trimRight().replace(/(^| )\w/g, c => c.toUpperCase()))));
+
+	correctAnswers = `{{Meaning}}`.toLowerCase().split(", ");
+	var accepted = [];
+	var alternative = capitalize(`{{Meaning}}`.toLowerCase().split(", ").splice(1));
+	meaningWhitelist.forEach((correct) => {
+		if (!correctAnswers.includes(correct)) {
+			correctAnswers.push(correct);
+			accepted.push(correct);
+		}
+	});
+
+	var meanings = capitalize(correctAnswers);
+	accepted = capitalize(accepted);
+
+	correctText.innerHTML = "Primary: <b>" + meanings[0] + "</b>";
+	if (meanings.length > 1) {
+		correctText.innerHTML += "<br>Alternative: <b>" + alternative.join(", ") + "</b>";
 	}
+	if (accepted.length > 0) {
+		correctText.innerHTML += "<br>Accepted: <b>" + accepted.join(", ") + "</b>";
+	}
+} else if (`{{Card}}` === "Reading") {
+	correctAnswers = readingWhitelist;
+	var items = [];
+	correctAnswers.forEach((x) => {
+		items.push("<reading>" + x + "</reading>");
+	});
+	correctText.innerHTML = items.join(" ");
+} else if (`{{Card}}` === "Characters") {
+	var parts = `{{Character_Whitelist}}`.split(" | ");
+	var lines = [];
+	parts.forEach((x) => {
+		answers = x.split(", ");
+		correctAnswers = correctAnswers.concat(answers);
+		var name = (`{{Card_Type}}` === "Kanji") ? "kanji" : "vocab";
+		var text = "<p><characters class=\"correct-" + name + "\">" + answers.shift() + "</characters> - Reading";
+		if (answers.length > 1) {
+			text += "s";
+		}
+		text += ": ";
+		answers.forEach((x) => {
+			text += "<reading>" + x + "</reading> ";
+		});
+		lines.push(text);
+	});
+	correctText.innerHTML = lines.join("</p><p>") + "</p>";
+}
 
+if (typedAnswerLower != "") {
 	var answerDiv = document.createElement("div");
-	answerDiv.setAttribute("id","typeans");
+	answerDiv.setAttribute("id", "typeans");
 	answerDiv.innerHTML = typedAnswer;
+	if (`{{Card}}` !== "Meaning") {
+		answerDiv.style.fontFamily = "Hiragino Kaku Gothic Pro W3";
+	}
 	document.getElementById("typeans").replaceWith(answerDiv);
 
 	if (typedAnswerLower === "") {
@@ -416,6 +529,9 @@ if (document.getElementById("typeans")) {
 	} else {
 		answerDiv.classList.add("incorrect");
 	}
+} else {
+	document.getElementsByClassName("input")[0].style.display = "none";
+	document.getElementsByClassName("input")[0].style.display = "none";
 }
 </script>
 
