--- a/back.html
+++ b/back.html
@@ -509,7 +509,7 @@ if (`{{Card}}` === "Meaning") {
 	});
 	correctText.innerHTML = items.join(" ");
 } else if (`{{Card}}` === "Characters") {
-	var parts = `{{Character_Whitelist}}`.split(" | ");
+	var parts = ``.split(" | ");
 	var lines = [];
 	parts.forEach((x) => {
 		answers = x.split(", ");
