--- a/front.html
+++ b/front.html
@@ -15,7 +15,11 @@ document.getElementById("level").innerHTML = level;
 <script>
 var answerDiv = document.getElementById("typeans");
 if (answerDiv !== null) {
-	answerDiv.setAttribute("placeholder", "Enter " + `{{Card}}`);
+	if(`{{Card}}` === "Meaning") {
+	  answerDiv.setAttribute("placeholder", "Answer");
+  } else {
+	  answerDiv.setAttribute("placeholder", "答え");
+  }
 	if (`{{Card}}` !== "Meaning") {
 		wanakana.bind(answerDiv);
 		answerDiv.style.fontFamily = "Hiragino Kaku Gothic Pro W3";
